<resources>

    <!--TEXTOS A UTILIZAR NA ACTIVIDADE MAPA-->
    <string name="title_activity_maps">Map</string>

    <!--TEXTOS A UTILIZAR NA ACTIVIDADE SPLASH-->
    <string name="app_name">Project One</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="btdash">Dashboard</string>

    <!--TEXTOS A UTILIZAR NA ACTIVIDADE DASHBOARD-->
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="btagenda">Agenda</string>

    <!--TEXTOS A UTILIZAR NA ACTIVIDADE EMPRESA-->
    <string name="title_activity_empresa">Empresa</string>
    <string name="btempresa">Empresas</string>
    <string name="action_search">Search</string>
    <string name="action_mail">Mail</string>

    <!--TEXTOS A UTILIZAR NA ACTIVIDADE EMPRESA DETALHE-->
    <string name="title_activity_emp_detal">Empresa</string>
    <string name="tab_com">Comercial</string>
    <string name="tab_fin">Financeiro</string>
    <string name="tab_det">Detalhes</string>
    <string name="Txt_detnome">Nome</string>
    <string name="L_detmorada">Morada</string>
    <string name="Txt_detmorada">----------</string>
    <string name="L_detlocalidade">Localidade</string>
    <string name="Txt_detlocalidade">--------</string>
    <string name="L_detcontacto">Contacto</string>
    <string name="Txt_detcontacto">--------</string>
    <string name="L_detrepres">Representante</string>
    <string name="Txt_detrepres">--------</string>
    <string name="L_detdtmanut">Prazo Manutenção</string>
    <string name="Txt_detdtmanut">--------</string>
    <string name="title_activity_mail">Mail Activity</string>
    <string name="BT_sendmail">Enviar</string>
    <string name="ET_titulo">Titulo</string>
    <string name="ET_texto">Escreva Mensagem</string>
    <string name="L_tomail">Para:</string>
    <string name="L_titulo">Assunto:</string>
    <string name="L_mensagem">Mensagem:</string>



    <!--TEXTOS A UTILIZAR NA ACTIVIDADE COMERCIAIS-->
    <string name="title_activity_comerciais">Comerciais</string>
    <string name="btcomercial">Comercial</string>
    <string name="title_activity_com_detal">Comercial</string>
    <string-array name="logo">
        <item>@drawable/agenda </item>
        <item>@drawable/comercial </item>
        <item>@drawable/empresa </item>
        <item>@drawable/agenda </item>
        <item>@drawable/comercial </item>
        <item>@drawable/empresa </item>
        <item>@drawable/agenda </item>
        <item>@drawable/comercial </item>
        <item>@drawable/empresa </item>
        <item>@drawable/empresa </item>
    </string-array>


    <!--TEXTOS A UTILIZAR NA ACTIVIDADE AGENDA-->
    <string name="title_activity_agenda">Agenda</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="title_activity_ag_detal">Agenda Detalhe</string>

    <!--TEXTOS A UTILIZAR NA ACTIVIDADE ESTATISTICA-->
    <string name="BTtoestatistica">Estatística</string>
    <string name="BT_detmapa">MAPA</string>
    <string name="Tit_comemp">Empresa</string>
    <string name="Titcomdt">Data</string>
    <string name="L_manutencao">Prazos de Manutenção Expirados:</string>


</resources>
