<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/L_tomail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/L_tomail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_tomail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:editable="false"
            android:paddingLeft="10dp" />
    </TableRow>

    <TextView
        android:id="@+id/L_assunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:text="@string/L_titulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_submail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:hint="@string/ET_titulo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/L_mensagem"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_txtmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ET_texto"
        android:inputType="textMultiLine"  />

    <Button
        android:id="@+id/bt_sendmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BT_sendmail" />

</LinearLayout>
