<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/idMenu"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_overflow"
        android:title="MenusTeste">
        <menu>

            <item
                android:id="@+id/action_mail"
                android:icon="@drawable/ic_action_email"
                android:orderInCategory="2"
                android:title="@string/action_mail"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_settings"
                android:orderInCategory="3"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_logout"
                android:orderInCategory="4"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/action_logout"
                app:showAsAction="always" />
        </menu>
    </item>

</menu>
