<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.android.exemplo.projectone.empresa.EmpDetalActivity">


    <TextView
        android:id="@+id/txt_detnome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:background="#D3D3D3"
        android:ellipsize="marquee"
        android:ems="3"
        android:gravity="center_horizontal"
        android:maxLength="35"
        android:maxLines="1"
        android:text="@string/Txt_detnome"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:visibility="visible"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tab_com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/LVempdetal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_fin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_det"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:labelFor="@string/tab_det"
                    android:orientation="vertical">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageviewLogoEmp"
                            android:clickable="true" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/Ldetmorada"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.00"
                        android:text="@string/L_detmorada"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txt_detmorada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Txt_detmorada" />

                    <TextView
                        android:id="@+id/L_detlocalidade"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.00"
                        android:text="@string/L_detlocalidade"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txt_detlocalidade"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Txt_detlocalidade" />

                    <TextView
                        android:id="@+id/L_dettelefone"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.00"
                        android:text="@string/L_detcontacto"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txt_dettelefone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Txt_detcontacto" />

                    <TextView
                        android:id="@+id/L_detrepres"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.00"
                        android:text="@string/L_detrepres"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txt_detrepres"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Txt_detrepres" />

                    <TextView
                        android:id="@+id/L_detdtmanut"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.00"
                        android:text="@string/L_detdtmanut"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txt_detdtmanut"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Txt_detdtmanut" />

                    <Button
                        android:id="@+id/Btdetmapa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="25dp"
                        android:text="@string/BT_detmapa"
                        android:textStyle="bold" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>


</LinearLayout>
